syntax = "proto3";

package gaapicommon.messages;
option csharp_namespace = "GAAPICommon.Messages";

message RoadmapItemTaskSummaryDto {
	int32 RoadmapItemId = 1;
}